--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "ratio-bot",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "start": "node src/index"
   },
   "keywords": [],
-  "author": "",
+  "author": "jonah",
   "license": "ISC",
   "dependencies": {
     "discord.js": "^12.5.3"
