--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "discord.js": "^12.5.3",
     "emojis": "^1.0.10",
-    "mongoose": "^5.13.3"
+    "mongoose": "^5.13.3",
+    "nanoid": "^3.1.23"
   }
 }
