--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "discord.js": "^12.5.3",
     "emojis": "^1.0.10",
     "mongoose": "^5.13.3",
-    "nanoid": "^3.1.23"
+    "nanoid": "^3.1.23",
+    "tesseract.js": "^2.1.5"
   }
 }
