--- a/package.json
+++ b/package.json
@@ -1,19 +1,23 @@
 {
   "name": "ratio-bot",
-  "version": "2.0.0",
+  "version": "1.0.0",
   "description": "",
-  "main": "src/index.js",
+  "main": "index.ts",
   "scripts": {
-    "start": "node src/index"
+    "start": "ts-node-dev src/.",
+    "build": "tsc"
   },
   "keywords": [],
   "author": "jonah",
-  "license": "ISC",
+  "license": "AGPL-3.0-or-later",
   "dependencies": {
-    "discord.js": "^12.5.3",
-    "emojis": "^1.0.10",
-    "mongoose": "^5.13.3",
-    "nanoid": "^3.1.23",
-    "tesseract.js": "^2.1.5"
+    "@discordjs/builders": "^0.8.2",
+    "@discordjs/rest": "^0.1.0-canary.0",
+    "@prisma/client": "^3.5.0",
+    "discord.js": "^13.3.1",
+    "dotenv": "^10.0.0"
+  },
+  "devDependencies": {
+    "prisma": "^3.5.0"
   }
 }
