--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@discordjs/builders": "^0.8.2",
     "@discordjs/rest": "^0.1.0-canary.0",
     "@prisma/client": "^3.5.0",
+    "@top-gg/sdk": "^3.1.3",
     "discord.js": "^13.3.1",
     "dotenv": "^10.0.0"
   },
