fix leaderboards, switch error logging, add multiple voting emojis, and change how ratios are detected

--- a/example.env
+++ b/example.env
@@ -1,8 +1,8 @@
-DATABASE_URL=""
-TOKEN=""
-TOPGG_TOKEN=""
-EMOJI=""
-VOTED_EMOJI=""
-GUILD=""
-WEBHOOK_URL=""
-MODE=""
+DATABASE_URL="" # MongoDB
+TOKEN="" # Discord Token
+TOPGG_TOKEN="" # https://top.gg/ Token
+EMOJI="" # Default emoji used for ratios
+VOTED_EMOJIS="" # Emojis used after a user has voted
+GUILD="" # Guild ID for testing slash commands
+SENTRY_DSN="" # Sentry DSN for error reporting
+MODE="" # PROD or DEV
