--- a/package.json
+++ b/package.json
@@ -18,10 +18,11 @@
     "@top-gg/sdk": "^3.1.3",
     "@types/express": "^4.17.13",
     "discord.js": "^13.3.1",
-    "dotenv": "^10.0.0"
+    "dotenv": "^10.0.0",
+    "highcharts": "^9.3.3"
   },
   "devDependencies": {
-    "prisma": "^3.7.0",
-    "prettier": "^2.5.1"
+    "prettier": "^2.5.1",
+    "prisma": "^3.7.0"
   }
 }
