--- a/package.json
+++ b/package.json
@@ -13,16 +13,17 @@
   "dependencies": {
     "@discordjs/builders": "^0.8.2",
     "@discordjs/rest": "^0.1.0-canary.0",
-    "@prisma/client": "^3.7.0",
+    "@prisma/client": "^3.9.1",
     "@sentry/node": "^6.16.1",
     "@top-gg/sdk": "^3.1.3",
-    "@types/express": "^4.17.13",
     "discord.js": "^13.3.1",
     "dotenv": "^10.0.0",
+    "express": "^4.17.2",
     "highcharts": "^9.3.3"
   },
   "devDependencies": {
+    "@types/express": "^4.17.13",
     "prettier": "^2.5.1",
-    "prisma": "^3.7.0"
+    "prisma": "^3.9.1"
   }
 }
