--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "discord.js": "^13.3.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
-    "highcharts": "^9.3.3"
+    "highcharts": "^9.3.3",
+    "topgg-autoposter": "^2.0.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
