--- a/.drone.yml
+++ b/.drone.yml
@@ -1,17 +1,10 @@
 kind: pipeline
-type: exec
 name: default
-
-platform:
-  os: linux
-  arch: amd64
+type: docker
 
 steps:
-  - name: build
-    commands:
-      - npm i
-      - npm run build
-  - name: start
+  - name: deploy
+    image: node
     environment:
       MODE:
         from_secret: MODE
@@ -30,4 +23,6 @@ steps:
       DATABASE_URL:
         from_secret: DATABASE_URL
     commands:
+      - npm i
+      - npm run build
       - node dist/src/index
