finish custom emojis and add ratio deleter

--- a/example.env
+++ b/example.env
@@ -1,8 +1,9 @@
-DATABASE_URL="" # MongoDB
-TOKEN="" # Discord Token
-TOPGG_TOKEN="" # https://top.gg/ Token
-EMOJI="" # Default emoji used for ratios
-VOTED_EMOJIS="" # Emojis used after a user has voted
-GUILD="" # Guild ID for testing slash commands
-SENTRY_DSN="" # Sentry DSN for error reporting
-MODE="" # PROD or DEV
+DATABASE_URL="mongodb://username:password@website.com/database" # MongoDB URI
+TOKEN="" # Discord bot token
+TEST_GUILD="" # Guild ID for testing slash commands
+OWNER_ID="" # Discord user ID for owner of bot
+MODE="prod" # dev or prod
+VOTE_URL="https://top.gg/bot/<client id>/vote" # Top.gg vote URL
+TOPGG_TOKEN="" # Top.gg API token
+TOPGG_WEBHOOK="" # Top.gg webhook token
+SENTRY_DSN="" # Sentry DSN for error logging
