--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ratio-bot",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
   "main": "index.ts",
   "scripts": {
@@ -16,10 +16,10 @@
     "@prisma/client": "^3.10.0",
     "@sentry/node": "^6.16.1",
     "@top-gg/sdk": "^3.1.3",
+    "chalk": "^4.1.2",
     "discord.js": "^13.3.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
-    "highcharts": "^9.3.3",
     "topgg-autoposter": "^2.0.1"
   },
   "devDependencies": {
